# jumpchess

./: .gitignore  CMakeLists.txt  CheckersImageObject.cpp  CheckersImageObject.h  CheckersMapLimitCheck.cpp  CheckersMapLimitCheck.h  CheckersUI.cpp  CheckersUI.h  ChessCamera.cpp  ChessCamera.h  ChessInclude.h  ChessNode.cpp  ChessNode.h  ChinessJumpChessControl.cpp  ChinessJumpChessControl.h  MouseMoveChessOpt.cpp  MouseMoveChessOpt.h  README.md  README_zh.md  UI.h  history  jump.cpp  jump.h  main.cpp  main1.cpp  main2.txt  main3.cpp  main4.cpp  start_tarin_mydata.sh
2023.1.23_roboflow.com.my_jump_chess_picture/: README.dataset.txt  README.roboflow.txt
2023.1.23_roboflow.com.my_jump_chess_picture/test/: 2022-12-20-213605_jpg.rf.5b9f74c22e4f8a54386b43d1814f9d2b.xml  2022-12-20-214923_jpg.rf.04a9a510b3cc930d4037ac59f33ae4a9.xml  2022-12-20-215052_jpg.rf.76d92e3e275ba2cf47d6c5266fbefb92.xml  2022-12-20-215712_jpg.rf.7bb63d7f73c6343caa44d72cd40e6ca5.xml  2022-12-20-215727_jpg.rf.035bc59e391d3b3fdae51a54dde1cba9.xml  2022-12-20-215818_jpg.rf.77d5020f2e1538e249c21883663b3479.xml  2022-12-20-215833_jpg.rf.63e89470934c1ac05af7ebc4ec4b7e7a.xml  2022-12-20-220033_jpg.rf.10fa23d917b8462ca6d7fc955baff28c.xml  2022-12-20-220410_jpg.rf.e53ed959fb331370411f6f101d9a9629.xml  2022-12-20-220529_jpg.rf.62c0ce0f50499683b49d4cd79309a30d.xml  2022-12-20-220537_jpg.rf.0c87c8c9d056bdb9249184a96e43838d.xml  2022-12-20-220545_jpg.rf.5b044157a1bd8e31e452593421d1f937.xml  2022-12-20-220624_jpg.rf.61721166b12e975c026b3910c3c2b99a.xml  (+14 more)
FrameProcessor/: BGFGSegmentor.cpp  BGFGSegmentor.h  Camera_OutPut_UI.cpp  Camera_OutPut_UI.h  Chessboardinfo.cpp  Chessboardinfo.h  FrameProcessor.h
image/: blue.xcf  green.xcf  orange.xcf  red.xcf  rosered.xcf  write.xcf
inputImage/: .test2blue.png.swp  a1.txt  a2.txt
scripts/: export_yolo11.sh  jump_game.py  jump_game2.py  jump_game3v3.py  jump_sim.py
utils/: MultipleImageWindow.cpp  MultipleImageWindow.h  SaveData2INIFile.cpp  SaveData2INIFile.h  inifile.cpp  inifile.h
yolovx/: yolo.cpp  yolo.h
(+238 files in other folders)
